--- a/package.json
+++ b/package.json
@@ -40,11 +40,16 @@
     "sass": "^1.55.0",
     "typescript": "~4.8.2",
     "vite": "^4.0.1",
+    "vite-plugin-dts": "~1.7.1",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "^4.0.2",
     "vitest": "^0.25.8"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.9",
+    "@mui/material": "^5.11.10",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
